# volatildap

./: .gitignore  .travis.yml  ChangeLog  LICENSE  MANIFEST.in  Makefile  README.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini
templdap/: server.py
tests/: test_core.py  test_usage.py
tests/minipki/: .gitignore  Makefile  README.md  ca-localhost.crt  ca-volatildap.org.crt  interm-localhost.crt  interm-localhost.csr  interm-localhost.key  interm-volatildap.org.crt  interm-volatildap.org.csr  interm-volatildap.org.key  localhost.crt  localhost.key  localhost.volatildap.org.crt  localhost.volatildap.org.key  openssl-ca-localhost.cnf  openssl-ca-volatildap.org.cnf  openssl-ca.cnf.in  openssl-leaf.cnf.in
volatildap/: __init__.py  cli.py  compat.py  control.py  core.py  server.py  version.py
