[metadata]
name = volatildap
version = 1.5.1.dev0
description = Temporary slapd launcher for testing purposes
long_description = file: README.rst
author = Raphaël Barrois
author_email = raphael.barrois+volatildap@polytechnique.org
url = https://github.com/rbarrois/volatildap
keywords = ldap, test, openldap, slapd
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
    Topic :: Software Development :: Testing
    Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP

[options]
zip_safe = false
packages = volatildap
python_requires = >=3.5
install_requires =
    requests
setup_requires = setuptools

[options.extras_require]
dev =
# Quality
    check-manifest
    flake8
    isort>=5.0.0
    tox
# Testing tools
    psutil
# Releasing
    wheel
    zest.releaser[recommended]

[bdist_wheel]
universal = 1

[zest.releaser]
; semver-style versions
version-levels = 3

[distutils]
index-servers = pypi

[flake8]
max-line-length = 120

[isort]
line_length = 88

# Goal:
# from foo import (
#     bar,
#     baz,
# )

# Vertical hanging
multi_line_output = 3
include_trailing_comma = True
use_parentheses = True
force_single_line = True
